--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
 	<artifactId>JavaSchool2020</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>JavaSchool2020</name>
-	<description>paqueteria project for Spring Boot</description>
+	<description>Project for JavaSchool 2020</description>
 
 	<properties>
 		<java.version>11</java.version>
