--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,4 @@ spring.rabbitmq.host=164.90.157.49
 spring.rabbitmq.port=5672
 spring.rabbitmq.username=white
 spring.rabbitmq.password=rabbit
+spring.main.allow-bean-definition-overriding=true
